syntax = "proto3";
option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService{
  rpc GetDiscount(GetDiscountRequest) returns(CouponModel);
  rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
  rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
  rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
}

message CouponModel{
  int32 id = 1;
  string productName = 2;
  string description = 3;
  int32 amount = 4;
  
}
message GetDiscountRequest{
  string productName = 1; 
}
message CreateDiscountRequest{
   CouponModel model = 1;
}
message DeleteDiscountRequest{
  CouponModel model = 1;
  
}
message DeleteDiscountResponse{
  bool sucess= 1;
}
message UpdateDiscountRequest
{
}  